<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_full_name">Project Transparency</string>
    <string name="app_name">Project Trnsprncy</string>
    
    

	<!-- General Strings -->    
    <string name="are_you_sure">Are you sure?</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email Address</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="questions">Questions</string>
    <string name="partners">Partners</string>
    <string name="confirmed">Confirmed</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="denied">Denied</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
   	<string name="reporting">Reporting</string>
   	<string name="added">Added</string>
   	<string name="error">Error</string>
   	<string name="type">Type</string>
   	<string name="question">Question</string>
   	<string name="sync_error">Sync error, please try again soon.</string>
   	
   	<!-- Time Intervals -->
   	<string name="days">days</string>
   	<string name="day">day</string>
   	<string name="hours">hours</string>
   	<string name="hour">hour</string>
   	<string name="minutes">minutes</string>
   	<string name="minute">minute</string>
   	<string name="moments">moments</string>
    
    
    <!-- Home Activity -->
    <string name="home">Home</string>
    <string name="manager_it_has_been">It has been $ since your last report.</string>
    <string name="manager_never_reported">You have not yet reported.</string>
    <string name="manager_question_listed">Questions Listed: </string>
    <string name="manager_partners_listed">Partners Listed: </string>
    <string name="current_partners">Current Partners</string>
    <string name="current_questions">Current Questions</string>
    <string name="sync_partner_status">Sync Partners Status</string>
    <string name="confirm_add_partner">Are you sure you want to add $ to your partners list? They will receive a confirmation email.</string>
    <string name="error_existing_partner">Partner has already been added.</string>
    <string name="error_invalid_email">Invalid email address. Try again.</string>
    <string name="error_cant_add_self">Silly, you can\'t add yourself.</string>
    <string name="success_report">Report submitted successfully.</string>
    
    <!-- Login Activity -->
    <string name="logging_in">Logging In&#8230;</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="recover_login">Recover Login</string>
    <string name="login_unconfirmed_error">Your account has not been confirmed. Please check your email.</string>
    <string name="login_invalid_error">Invalid Email/Password Combo, Please Try Again</string>
    <string name="no_network_connection">No Network</string>
    <string name="login_auto_login_text">Auto Login</string>
    <string name="login_remember_me_text">Remember Me</string>
    <string name="sending_recovery_request">Sending Recovery Request</string>
    <string name="success_sending_recover">Successfully sent password recovery request.</string>
    <string name="failure_sending_recover">Failed sending password recover request. There may be a problem with your email address or connection.</string>
    
    <!-- Register Activity -->
    <string name="register_title">Register for an Account</string>
    <string name="full_name">Full Name</string>
    <string name="birth_year">Birth Year</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register_success">Registration successful. Check your email for the confirmation message.</string>
    <string name="register_existing_email">Email already registered.</string>
    <string name="register_error">Error Registering, please try again.</string>

    <!-- Question List -->
    <string name="delete_question">Delete Question?</string>
    <string name="edit_question_cont">Edit question</string>
    <string name="delete_question_cont">Delete question</string>
    <string name="deleted_question_success">Deleted question successfully</string>
    <string name="error_add_update_question">There was an error adding or updating question. Please try again.</string>
    <string name="success_add_question">Successfully added question.</string>
    <string name="success_edit_question">Successfully updated question.</string>
    <string name="question_list_context_menu_title">Question options</string>
    <string name="sync_questions">Sync Questions</string>
    <string name="syncing_questions">Syncing Questions&#8230;</string>
    <string name="success_questions_sync">Questions Successfully Synced</string>
    
    <!-- Add/Edit Question  -->
    <string name="add_question_label">Add A New Question</string>
    <string name="update_question_label">Update Existing Question</string>
    <string name="positive_response">Positive Response</string>
    <string name="question_type_prompt">Choose A Question Type</string>
    <string-array name="question_type_value_array">
    	<item>YES_NO</item>
    	<item>SHORT_ANSWER</item>
    </string-array>
    <string-array name="question_type_entry_array">
    	<item>Yes/No</item>
    	<item>Short Answer</item>
    </string-array>
    <string name="pos_response_prompt">Choose A Positive Response</string>
    <string-array name="pos_response_array">
    	<item>YES</item>
    	<item>NO</item>
    </string-array>
    <string name="add_question_btn_text">Add Question</string>
    <string name="save_question_btn_text">Save Question</string>

    <!-- Partner List -->
    <string name="partners_list">Partners List</string>
    <string name="partner_list_context_menu_title">Question options</string>
    <string name="add_partner_btn_text">Add Partner</string>
    <string name="delete_partner">Delete Partner?</string>
    <string name="edit_partner_cont">Edit partner</string>
    <string name="delete_partner_cont">Delete partner</string>
    <string name="error_add_partner">There was an error adding partner. Please try again.</string>
    <string name="error_update_partner">There was an error updating partner. Please try again.</string>
    <string name="success_add_partner">Successfully added or updated partner.</string>
    <string name="new_partner_email">Enter new partner email</string>
    <string name="sync_partners">Sync Partners</string>
    <string name="syncing_partners">Syncing Partners&#8230;</string>
    <string name="success_partners_sync">Partners Successfully Synced</string>
    
    <!-- Settings Activity -->
	<string name="settings_label">Settings</string>
    <string name="settings_sync_title">Sync Settings</string>
    <string name="settings_reminders_on_title">Enable reminders</string>
    <string name="settings_reminders_on_summary"></string>
    <string name="settings_reminder_summary">Select time of day to be reminded</string>
    <string name="settings_reminder_time_title">Reminder Time</string>
    <string name="settings_reminder_cat_title">Reminders</string>
    <string name="settings_reminder_interval_title">Reminder Interval</string>
    <string name="settings_reminder_interval_summary">How long between reminders</string>
    <string name="settings_reminder_vibrate_title">Vibrate on reminder</string>
    <string name="settings_reminder_light_title">LED Light on reminder</string>
    <string-array name="settings_reminder_interval_values">
    	<item>0</item>
    	<item>1</item>
    	<item>5</item>
    	<item>10</item>
    	<item>20</item>
    </string-array>
    <string-array name="settings_reminder_interval_entries">
    	<item>Do not repeat reminders</item>
    	<item>1 minute</item>
    	<item>5 minute</item>
    	<item>10 minutes</item>
    	<item>20 minutes</item>
    </string-array>
    <string name="reminder_scheduled_for">Reminder Scheduled For </string>
    <string name="settings_reporting_cat">Reporting</string>
    <string name="settings_send_report_to_self">Send a copy of my reports to me</string>
    <string name="settings_report_to_self">Report to Self</string>
    <string name="settings_add_follow_up_title">Follow-Up Request</string>
    <string name="settings_add_follow_up_desc">
        A check box in your report that will include a follow-up request in your
        report
    </string>
    
    <!-- Reporting Activity -->
    <string name="save_and_send">Save And Send</string>
    <string name="pick_one">Pick One&#8230;</string>
    <string name="sending_report">Sending Report&#8230;</string>
    <string name="error_failed_report">Error submitting report. Please try again.</string>
    <string name="reporting_follow_up">Ask my partners to follow up with me on this report</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
   	<string name="report_now">Report Now</string>
    
    <!-- Notification Keys -->
    <string name="reminder_service_started">Report Reminder</string>
    <string name="reminder_service_stopped">Reminder Service Ended</string>
    <string name="reminder_service_label">Complete accountability report now?</string>
    <string name="sending_registration">Sending Registration…</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="tile_icon">Tile Icon</string>
</resources>
