<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout 
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:layout_margin="5dp">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/register"></TextView>
    <TextView android:text="@string/email" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/register_email_et" android:layout_width="fill_parent" android:inputType="textEmailAddress">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:text="@string/password" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/register_password_et" android:layout_width="fill_parent" android:inputType="textPassword"></EditText>
    <TextView android:text="@string/full_name" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/register_full_name_et" android:layout_width="fill_parent" android:inputType="textPersonName"></EditText>
    <TextView android:text="@string/birth_year" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/register_birth_year_et" android:layout_width="fill_parent" android:inputType="number"></EditText>
    <TextView android:text="@string/gender" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <RadioGroup 
    	android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content">
	    <RadioButton android:layout_height="wrap_content" android:text="@string/male" android:layout_width="wrap_content" android:id="@+id/register_male_radio"/>
	    <RadioButton android:layout_height="wrap_content" android:text="@string/female" android:layout_width="wrap_content" android:id="@+id/register_female_radio"/>
    </RadioGroup>
    <LinearLayout 
    	android:id="@+id/linearLayout1" 
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal" 
    	android:layout_width="wrap_content"
    	android:layout_marginTop="5dp">
	    <Button android:text="@string/submit" android:id="@+id/register_submit_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	    <Button android:text="@string/cancel" android:id="@+id/register_cancel_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
    </LinearLayout>
  </LinearLayout>
</ScrollView>
