<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true">
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="220dp" android:id="@+id/login_usernameTV" android:inputType="textEmailAddress">
            <requestFocus></requestFocus>
        </EditText>
        <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/login_passowrdTV" android:inputType="textPassword"></EditText>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/login_button" android:text="@string/login"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/login_recover_button" android:text="@string/recover_login"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/login_register_button" android:text="@string/register"></Button>
    </LinearLayout>
    
</RelativeLayout>
