<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:id="@+id/addEditQuestionLayout">
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceLarge" 
    	android:layout_width="wrap_content" 
    	android:id="@+id/addEditQuestionHeader" 
    	android:layout_height="wrap_content" 
    	android:text="@string/add_question_label"/>
    <TextView 
    	android:id="@+id/textView2" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="Question:"/>
    <EditText 
    	android:layout_width="fill_parent" 
    	android:inputType="textMultiLine" 
    	android:id="@+id/addQuestionText" 
    	android:layout_height="wrap_content">
        <requestFocus></requestFocus>
    </EditText>
    <TextView 
    	android:id="@+id/textView3" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="Type"/>
    <Spinner 
    	android:id="@+id/question_type_spinner" 
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content"
    	android:prompt="@string/question_type_prompt"/>
    <TextView 
    	android:id="@+id/textView4" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="Positive Response"/>
    <Spinner 
    	android:id="@+id/pos_response_spinner" 
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content"
    	android:prompt="@string/pos_response_prompt"/>
    <Button android:text="@string/add_question_btn_text" 
    	android:id="@+id/addQuestionBtn" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"/>
    
</LinearLayout>
